<resources>
    <string name="app_name">BookLib</string>
    <string name="desc_logotipo_do_aplicativo">Logotipo do Aplicativo</string>

    <string name="erro_carregar_documentos">Erro ao carregar documentos. Cheque sua conexão com a internet ou tente novamente em alguns minutos.</string>
    <string name="erro_carregar_livros">Erro ao carregar livros. Cheque sua conexão com a internet ou tente novamente em alguns minutos.</string>
    <string name="erro_carregar_lista">Não foi possível dados salvos. Você não poderá marcar documentos.</string>
    <string name="erro_carregar_checks">Não foi possivel carregar suas marcações nos documentos.</string>

    <string name="por_favor_aguarde">POR FAVOR, AGUARDE</string>
    <string name="carregando">CARREGANDO</string>
    <string name="voltar">VOLTAR</string>
    <string name="vazio">AINDA NÃO HÁ DOCUMENTOS</string>

    <string name="disciplina_portugues">Português</string>
    <string name="disciplina_matematica">Matemática</string>
    <string name="disciplina_ciencias">Ciências</string>
    <string name="disciplina_geografia">Geografia</string>
    <string name="disciplina_historia">História</string>
    <string name="disciplina_ingles">Inglês</string>
    <string name="disciplina_artes">Artes</string>
    <string name="disciplina_religiao">Religião</string>
    <string name="disciplina_ed_fisica">Ed. Física</string>

    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="github">GitHub</string>
    <string name="nossa_escola_no_maps">Nossa escola no Maps</string>
    <string name="apostilas_atividades_exercicios">APOSTILAS - LIVROS - EXERCÍCIOS</string>
    <string name="description_separador">Separador</string>
    <string name="title_activity_documents">DocumentsActivity</string>
    <string name="biblioteca">Livros</string>
    <string name="selecione_o_ano">Selecione o Ano</string>
    <string name="selecione_a_turma">Selecione a Turma</string>
    <string name="baixar">Abrir</string>

    <string name="info_authors">Developed DevFireClub</string>
    <string name="info_know_more">Toque para ler mais sobre atribuições, licenças e desenvolvimento.</string>
    <string name="wait">Aguarde…</string>
    <string name="enviado">Enviado!</string>
    <string name="error_reporting">Reportar Erro</string>
    <string name="send_erro">Ao tocar no botão abaixo você enviará um relatório desse erro para nossa equipe, assim podemos trabalhar para corrigi-lo. Esse relatório contém apenas detalhes sobre a execução desse aplicativo, não coletamos dados pessoais ou qualquer recurso de mídia do seu aparelho. (Requer conexão com a internet).</string>
    <string name="send_to_analysis">Enviar para Análise</string>
    <string name="apostilas">Apostilas</string>
    <string name="biblioteca_online">Biblioteca Online</string>
    <string name="vazio_library">AINDA NÃO HÁ LIVROS AQUI</string>
    <string name="ler">Ler</string>
    <string name="capa_do_livro">Capa do Livro</string>
    <string name="capa_carregando">capa_carregando</string>
</resources>